--- a/Example/Source/Base.lproj/Main.storyboard
+++ b/Example/Source/Base.lproj/Main.storyboard
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A320" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="GzX-4u-840">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="GzX-4u-840">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,15 +21,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pHr-84-A7W" customClass="FDWaveformView" customModule="FDWaveformView">
-                                <color key="backgroundColor" red="0.99811935424804688" green="0.92034381628036499" blue="0.90713727474212646" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="wavesColor">
-                                        <color key="value" red="0.17254901959999999" green="0.50980392159999999" blue="0.78823529410000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ip2-HE-aX1">
+                                <rect key="frame" x="0.0" y="20" width="119.5" height="30"/>
                                 <color key="backgroundColor" red="0.98823529409999999" green="0.37647058820000001" blue="0.25882352939999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Load AAC">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -37,6 +33,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V6O-ov-C15">
+                                <rect key="frame" x="127.5" y="20" width="120" height="30"/>
                                 <color key="backgroundColor" red="0.98823529409999999" green="0.37647058820000001" blue="0.25882352939999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Load MP3">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -47,6 +44,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QiA-5t-Tep">
+                                <rect key="frame" x="255.5" y="20" width="119.5" height="30"/>
                                 <color key="backgroundColor" red="0.98823529409999999" green="0.37647058820000001" blue="0.25882352939999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Load OGG">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -57,6 +55,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eo2-dg-ThD">
+                                <rect key="frame" x="0.0" y="96" width="183.5" height="30"/>
                                 <color key="backgroundColor" red="0.91658645868301392" green="0.89184486865997314" blue="0.27463445067405701" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Zoom in">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -67,6 +66,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XOT-uC-eqi">
+                                <rect key="frame" x="191.5" y="96" width="183.5" height="30"/>
                                 <color key="backgroundColor" red="0.91658645868301392" green="0.89184486865997314" blue="0.27463445067405701" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Zoom out">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -76,7 +76,30 @@
                                     <action selector="doZoomOut" destination="GzX-4u-840" eventType="touchUpInside" id="AYs-Ev-ApW"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AIo-Bv-jmO" userLabel="Linear">
+                                <rect key="frame" x="0.0" y="134" width="183.5" height="30"/>
+                                <color key="backgroundColor" red="0.9165864587" green="0.89184486870000002" blue="0.27463445069999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Linear">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="doLinear" destination="GzX-4u-840" eventType="touchUpInside" id="Dfw-LG-KKA"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t25-dP-LU3" userLabel="Logarithmic">
+                                <rect key="frame" x="191.5" y="134" width="183.5" height="30"/>
+                                <color key="backgroundColor" red="0.9165864587" green="0.89184486870000002" blue="0.27463445069999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Logarithmic">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="doLogarithmic" destination="GzX-4u-840" eventType="touchUpInside" id="8C2-de-x46"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WLG-lH-cUv">
+                                <rect key="frame" x="0.0" y="58" width="375" height="30"/>
                                 <color key="backgroundColor" red="0.91658645868301392" green="0.89184486865997314" blue="0.27463445067405701" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Randomly set play progress">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -87,6 +110,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C2Y-UB-xTc">
+                                <rect key="frame" x="0.0" y="172" width="375" height="30"/>
                                 <color key="backgroundColor" red="0.91658645868301392" green="0.89184486865997314" blue="0.27463445067405701" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Run performance profiling">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -96,34 +120,49 @@
                                     <action selector="doRunPerformanceProfile" destination="GzX-4u-840" eventType="touchUpInside" id="qKf-b0-xNq"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pHr-84-A7W" customClass="FDWaveformView" customModule="FDWaveformView">
+                                <rect key="frame" x="0.0" y="210" width="375" height="457"/>
+                                <color key="backgroundColor" red="0.99811935424804688" green="0.92034381628036499" blue="0.90713727474212646" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="wavesColor">
+                                        <color key="value" red="0.17254901959999999" green="0.50980392159999999" blue="0.78823529410000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.93609845638275146" green="0.93607044219970703" blue="0.93608629703521729" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="Eo2-dg-ThD" secondAttribute="trailing" id="0h3-Y1-yc0"/>
+                            <constraint firstItem="XOT-uC-eqi" firstAttribute="leading" secondItem="Eo2-dg-ThD" secondAttribute="trailing" constant="8" id="1Ig-n7-rNu"/>
                             <constraint firstItem="WLG-lH-cUv" firstAttribute="top" secondItem="Ip2-HE-aX1" secondAttribute="bottom" constant="8" id="4ZM-7Q-VFH"/>
                             <constraint firstAttribute="trailing" secondItem="QiA-5t-Tep" secondAttribute="trailing" id="5mM-3f-3p7"/>
                             <constraint firstAttribute="trailing" secondItem="pHr-84-A7W" secondAttribute="trailing" id="8LR-eU-l1V"/>
+                            <constraint firstItem="AIo-Bv-jmO" firstAttribute="leading" secondItem="oh1-vd-YBA" secondAttribute="leading" id="9KE-Xv-0oY"/>
+                            <constraint firstItem="t25-dP-LU3" firstAttribute="top" secondItem="AIo-Bv-jmO" secondAttribute="top" id="BMs-8H-mOR"/>
                             <constraint firstItem="QiA-5t-Tep" firstAttribute="top" secondItem="Ip2-HE-aX1" secondAttribute="top" id="EP2-Bz-Vr6"/>
                             <constraint firstAttribute="trailing" secondItem="WLG-lH-cUv" secondAttribute="trailing" id="HHp-cp-GGI"/>
                             <constraint firstItem="C2Y-UB-xTc" firstAttribute="leading" secondItem="oh1-vd-YBA" secondAttribute="leading" id="HpT-w6-iSA"/>
-                            <constraint firstItem="XOT-uC-eqi" firstAttribute="leading" secondItem="oh1-vd-YBA" secondAttribute="leading" id="KdZ-Dj-KcD"/>
                             <constraint firstItem="Eo2-dg-ThD" firstAttribute="leading" secondItem="oh1-vd-YBA" secondAttribute="leading" id="Kke-ES-oXY"/>
+                            <constraint firstItem="Eo2-dg-ThD" firstAttribute="width" secondItem="XOT-uC-eqi" secondAttribute="width" id="LBw-T0-4UD"/>
                             <constraint firstItem="QiA-5t-Tep" firstAttribute="width" secondItem="Ip2-HE-aX1" secondAttribute="width" id="LWw-hq-qY8"/>
                             <constraint firstItem="pHr-84-A7W" firstAttribute="top" secondItem="C2Y-UB-xTc" secondAttribute="bottom" constant="8" id="Npi-VG-9Hy"/>
                             <constraint firstItem="V6O-ov-C15" firstAttribute="leading" secondItem="Ip2-HE-aX1" secondAttribute="trailing" constant="8" id="OPB-Vh-njT"/>
                             <constraint firstItem="Eo2-dg-ThD" firstAttribute="top" secondItem="WLG-lH-cUv" secondAttribute="bottom" constant="8" id="SQN-bP-TFX"/>
+                            <constraint firstItem="AIo-Bv-jmO" firstAttribute="width" secondItem="t25-dP-LU3" secondAttribute="width" id="TpO-pG-ZgS"/>
+                            <constraint firstItem="XOT-uC-eqi" firstAttribute="top" secondItem="Eo2-dg-ThD" secondAttribute="top" id="UYM-th-ZWm"/>
                             <constraint firstItem="01F-59-2xz" firstAttribute="top" secondItem="pHr-84-A7W" secondAttribute="bottom" id="VQx-0k-2h0"/>
+                            <constraint firstAttribute="trailing" secondItem="t25-dP-LU3" secondAttribute="trailing" id="XcT-QX-Vg4"/>
                             <constraint firstItem="pHr-84-A7W" firstAttribute="leading" secondItem="oh1-vd-YBA" secondAttribute="leading" id="ZNn-L4-LJb"/>
                             <constraint firstItem="WLG-lH-cUv" firstAttribute="leading" secondItem="oh1-vd-YBA" secondAttribute="leading" id="g3y-aI-M8l"/>
+                            <constraint firstItem="C2Y-UB-xTc" firstAttribute="top" secondItem="AIo-Bv-jmO" secondAttribute="bottom" constant="8" id="gW5-tE-o5r"/>
                             <constraint firstItem="QiA-5t-Tep" firstAttribute="leading" secondItem="V6O-ov-C15" secondAttribute="trailing" constant="8" id="hUB-FB-37u"/>
                             <constraint firstAttribute="trailing" secondItem="XOT-uC-eqi" secondAttribute="trailing" id="hba-mb-hKR"/>
                             <constraint firstItem="Ip2-HE-aX1" firstAttribute="top" secondItem="C8T-P3-aco" secondAttribute="bottom" id="jvf-Da-oMt"/>
                             <constraint firstItem="QiA-5t-Tep" firstAttribute="top" secondItem="V6O-ov-C15" secondAttribute="top" id="kbm-7d-0tI"/>
                             <constraint firstAttribute="trailing" secondItem="C2Y-UB-xTc" secondAttribute="trailing" id="kmU-rv-w1H"/>
                             <constraint firstItem="QiA-5t-Tep" firstAttribute="width" secondItem="V6O-ov-C15" secondAttribute="width" id="lII-fH-R24"/>
+                            <constraint firstItem="t25-dP-LU3" firstAttribute="leading" secondItem="AIo-Bv-jmO" secondAttribute="trailing" constant="8" id="lPo-HC-P0r"/>
                             <constraint firstItem="Ip2-HE-aX1" firstAttribute="leading" secondItem="oh1-vd-YBA" secondAttribute="leading" id="oQN-9n-qZO"/>
-                            <constraint firstItem="XOT-uC-eqi" firstAttribute="top" secondItem="Eo2-dg-ThD" secondAttribute="bottom" constant="8" id="tBI-Dm-XLR"/>
-                            <constraint firstItem="C2Y-UB-xTc" firstAttribute="top" secondItem="XOT-uC-eqi" secondAttribute="bottom" constant="8" id="yaM-Qf-2VN"/>
+                            <constraint firstItem="AIo-Bv-jmO" firstAttribute="top" secondItem="Eo2-dg-ThD" secondAttribute="bottom" constant="8" id="y5V-dz-TNg"/>
                         </constraints>
                     </view>
                     <connections>
