--- a/Example/Source/Base.lproj/Main.storyboard
+++ b/Example/Source/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="GzX-4u-840">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -18,11 +18,11 @@
                         <viewControllerLayoutGuide type="bottom" id="01F-59-2xz"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="oh1-vd-YBA">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ip2-HE-aX1">
-                                <rect key="frame" x="0.0" y="20" width="119.5" height="30"/>
+                                <rect key="frame" x="0.0" y="20" width="132.66666666666666" height="30"/>
                                 <color key="backgroundColor" red="0.98823529409999999" green="0.37647058820000001" blue="0.25882352939999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Load AAC">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -33,7 +33,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V6O-ov-C15">
-                                <rect key="frame" x="127.5" y="20" width="120" height="30"/>
+                                <rect key="frame" x="140.66666666666669" y="20" width="132.66666666666669" height="30"/>
                                 <color key="backgroundColor" red="0.98823529409999999" green="0.37647058820000001" blue="0.25882352939999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Load MP3">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -44,7 +44,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QiA-5t-Tep">
-                                <rect key="frame" x="255.5" y="20" width="119.5" height="30"/>
+                                <rect key="frame" x="281.33333333333326" y="20" width="132.66666666666669" height="30"/>
                                 <color key="backgroundColor" red="0.98823529409999999" green="0.37647058820000001" blue="0.25882352939999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Load OGG">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -54,8 +54,35 @@
                                     <action selector="doLoadOGG" destination="GzX-4u-840" eventType="touchUpInside" id="rhB-PI-RJC"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WLG-lH-cUv">
+                                <rect key="frame" x="0.0" y="58" width="203.66666666666666" height="30"/>
+                                <color key="backgroundColor" red="0.91658645868301392" green="0.89184486865997314" blue="0.27463445067405701" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="7Dv-4V-aqI"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                <state key="normal" title="Randomly set play progress">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="doAnimation" destination="GzX-4u-840" eventType="touchUpInside" id="fb7-NT-Wds"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QDN-fD-Zwd">
+                                <rect key="frame" x="211" y="58" width="203" height="30"/>
+                                <color key="backgroundColor" red="0.9165864587" green="0.89184486870000002" blue="0.27463445069999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <state key="normal" title="Randomly set colors">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="doChangeColors" destination="GzX-4u-840" eventType="touchUpInside" id="hy5-t9-gRe"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eo2-dg-ThD">
-                                <rect key="frame" x="0.0" y="96" width="183.5" height="30"/>
+                                <rect key="frame" x="0.0" y="96" width="203" height="30"/>
                                 <color key="backgroundColor" red="0.91658645868301392" green="0.89184486865997314" blue="0.27463445067405701" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Zoom in">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -66,7 +93,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XOT-uC-eqi">
-                                <rect key="frame" x="191.5" y="96" width="183.5" height="30"/>
+                                <rect key="frame" x="211" y="96" width="203" height="30"/>
                                 <color key="backgroundColor" red="0.91658645868301392" green="0.89184486865997314" blue="0.27463445067405701" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Zoom out">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -77,7 +104,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AIo-Bv-jmO" userLabel="Linear">
-                                <rect key="frame" x="0.0" y="134" width="183.5" height="30"/>
+                                <rect key="frame" x="0.0" y="134" width="203" height="30"/>
                                 <color key="backgroundColor" red="0.9165864587" green="0.89184486870000002" blue="0.27463445069999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Linear">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -88,7 +115,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t25-dP-LU3" userLabel="Logarithmic">
-                                <rect key="frame" x="191.5" y="134" width="183.5" height="30"/>
+                                <rect key="frame" x="211" y="134" width="203" height="30"/>
                                 <color key="backgroundColor" red="0.9165864587" green="0.89184486870000002" blue="0.27463445069999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Logarithmic">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -98,19 +125,8 @@
                                     <action selector="doLogarithmic" destination="GzX-4u-840" eventType="touchUpInside" id="8C2-de-x46"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WLG-lH-cUv">
-                                <rect key="frame" x="0.0" y="58" width="375" height="30"/>
-                                <color key="backgroundColor" red="0.91658645868301392" green="0.89184486865997314" blue="0.27463445067405701" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <state key="normal" title="Randomly set play progress">
-                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="doAnimation" destination="GzX-4u-840" eventType="touchUpInside" id="fb7-NT-Wds"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C2Y-UB-xTc">
-                                <rect key="frame" x="0.0" y="172" width="375" height="30"/>
+                                <rect key="frame" x="0.0" y="172" width="414" height="30"/>
                                 <color key="backgroundColor" red="0.91658645868301392" green="0.89184486865997314" blue="0.27463445067405701" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Run performance profiling">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -121,7 +137,7 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pHr-84-A7W" customClass="FDWaveformView" customModule="FDWaveformView">
-                                <rect key="frame" x="0.0" y="210" width="375" height="457"/>
+                                <rect key="frame" x="0.0" y="210" width="414" height="526"/>
                                 <color key="backgroundColor" red="0.99811935424804688" green="0.92034381628036499" blue="0.90713727474212646" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="color" keyPath="wavesColor">
@@ -139,19 +155,22 @@
                             <constraint firstItem="AIo-Bv-jmO" firstAttribute="leading" secondItem="oh1-vd-YBA" secondAttribute="leading" id="9KE-Xv-0oY"/>
                             <constraint firstItem="t25-dP-LU3" firstAttribute="top" secondItem="AIo-Bv-jmO" secondAttribute="top" id="BMs-8H-mOR"/>
                             <constraint firstItem="QiA-5t-Tep" firstAttribute="top" secondItem="Ip2-HE-aX1" secondAttribute="top" id="EP2-Bz-Vr6"/>
-                            <constraint firstAttribute="trailing" secondItem="WLG-lH-cUv" secondAttribute="trailing" id="HHp-cp-GGI"/>
                             <constraint firstItem="C2Y-UB-xTc" firstAttribute="leading" secondItem="oh1-vd-YBA" secondAttribute="leading" id="HpT-w6-iSA"/>
                             <constraint firstItem="Eo2-dg-ThD" firstAttribute="leading" secondItem="oh1-vd-YBA" secondAttribute="leading" id="Kke-ES-oXY"/>
                             <constraint firstItem="Eo2-dg-ThD" firstAttribute="width" secondItem="XOT-uC-eqi" secondAttribute="width" id="LBw-T0-4UD"/>
                             <constraint firstItem="QiA-5t-Tep" firstAttribute="width" secondItem="Ip2-HE-aX1" secondAttribute="width" id="LWw-hq-qY8"/>
                             <constraint firstItem="pHr-84-A7W" firstAttribute="top" secondItem="C2Y-UB-xTc" secondAttribute="bottom" constant="8" id="Npi-VG-9Hy"/>
                             <constraint firstItem="V6O-ov-C15" firstAttribute="leading" secondItem="Ip2-HE-aX1" secondAttribute="trailing" constant="8" id="OPB-Vh-njT"/>
+                            <constraint firstAttribute="trailing" secondItem="QDN-fD-Zwd" secondAttribute="trailing" id="QTd-XL-REq"/>
                             <constraint firstItem="Eo2-dg-ThD" firstAttribute="top" secondItem="WLG-lH-cUv" secondAttribute="bottom" constant="8" id="SQN-bP-TFX"/>
+                            <constraint firstItem="QDN-fD-Zwd" firstAttribute="leading" secondItem="WLG-lH-cUv" secondAttribute="trailing" constant="8" id="SmM-To-9dW"/>
                             <constraint firstItem="AIo-Bv-jmO" firstAttribute="width" secondItem="t25-dP-LU3" secondAttribute="width" id="TpO-pG-ZgS"/>
                             <constraint firstItem="XOT-uC-eqi" firstAttribute="top" secondItem="Eo2-dg-ThD" secondAttribute="top" id="UYM-th-ZWm"/>
+                            <constraint firstItem="WLG-lH-cUv" firstAttribute="height" secondItem="QDN-fD-Zwd" secondAttribute="height" id="V1j-L5-9JC"/>
                             <constraint firstItem="01F-59-2xz" firstAttribute="top" secondItem="pHr-84-A7W" secondAttribute="bottom" id="VQx-0k-2h0"/>
                             <constraint firstAttribute="trailing" secondItem="t25-dP-LU3" secondAttribute="trailing" id="XcT-QX-Vg4"/>
                             <constraint firstItem="pHr-84-A7W" firstAttribute="leading" secondItem="oh1-vd-YBA" secondAttribute="leading" id="ZNn-L4-LJb"/>
+                            <constraint firstItem="QDN-fD-Zwd" firstAttribute="width" secondItem="WLG-lH-cUv" secondAttribute="width" id="cfr-Vg-qXg"/>
                             <constraint firstItem="WLG-lH-cUv" firstAttribute="leading" secondItem="oh1-vd-YBA" secondAttribute="leading" id="g3y-aI-M8l"/>
                             <constraint firstItem="C2Y-UB-xTc" firstAttribute="top" secondItem="AIo-Bv-jmO" secondAttribute="bottom" constant="8" id="gW5-tE-o5r"/>
                             <constraint firstItem="QiA-5t-Tep" firstAttribute="leading" secondItem="V6O-ov-C15" secondAttribute="trailing" constant="8" id="hUB-FB-37u"/>
@@ -162,6 +181,7 @@
                             <constraint firstItem="QiA-5t-Tep" firstAttribute="width" secondItem="V6O-ov-C15" secondAttribute="width" id="lII-fH-R24"/>
                             <constraint firstItem="t25-dP-LU3" firstAttribute="leading" secondItem="AIo-Bv-jmO" secondAttribute="trailing" constant="8" id="lPo-HC-P0r"/>
                             <constraint firstItem="Ip2-HE-aX1" firstAttribute="leading" secondItem="oh1-vd-YBA" secondAttribute="leading" id="oQN-9n-qZO"/>
+                            <constraint firstItem="QDN-fD-Zwd" firstAttribute="top" secondItem="WLG-lH-cUv" secondAttribute="top" id="qhO-6Z-Krt"/>
                             <constraint firstItem="AIo-Bv-jmO" firstAttribute="top" secondItem="Eo2-dg-ThD" secondAttribute="bottom" constant="8" id="y5V-dz-TNg"/>
                         </constraints>
                     </view>
@@ -172,6 +192,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5tX-dp-6bC" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
         </scene>
     </scenes>
 </document>
